--- a/style.scss
+++ b/style.scss
@@ -6,42 +6,117 @@
 body {
     background-color: white;
     font-size: 30px;
+    font-family: sans-serif;
 }
-
-// @media (max-width: 768px) {
-//     body {
-//         background-color: red;
-//         font-size: 20px;
-//     }
-// }
-// @media (max-width: 488px) {
-//     body {
-//         background-color: blue;
-//         font-size: 10px;
-//     }
-// }
 header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    // justify-content: space-between;
     width: 100%;
     max-width: 1520px;
     height: 65px;
     padding: 16px 24px;
     background-color: #fff;
     margin-inline: auto;
+    border-bottom: 1px solid #ccc;
+
 }
-.nav {
+.logo {
+    display: flex;
+    align-items: center;
+    margin-right: 32px;
+    img {
+        width: 32px;
+        margin-right: 10px;
+    }
+    h6 {
+        color: #7F56D9;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 24px;
+    }
+}
+.nav {  
+    margin-right: auto;
+    margin-bottom: 10px;
     ul {
         display: flex;
         align-items: center;
         list-style: none;
-        gap: 16px;
+        gap: 18px;
+    }
+    li a {
+        color: #252C32;
+        text-decoration: none; 
+        line-height: 24px;
+        font-size: 14px;
+    }
+    .btn {
+        background-color: #FFFFFF;
+        border: 1px solid #d0d5dd;
+        border-radius: 6px;
+        // width: 68px;
+        // height: 32px;
+        padding: 4px 12px; 
+        box-sizing: border-box; 
+    }
+          
+}
+.icons {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    .profile {
+        margin-left: 8px;
+        width: 24px;
+        height: 24px;
+    }
+}
+.burger {
+    display: none; 
+    flex-direction: column;
+    justify-content: space-between;
+    width: 24px;
+    height: 18px;
+    span {
+        display: block;
+        height: 3px;
+        background-color: #5B6871;
+        border-radius: 2.5px;
     }
 }
 @media (max-width: 960px) {
+    header {
+        max-width: 800px;
+        padding-top: 15px;
+        padding-bottom: 18px;
+    }
+    .burger {
+        display: flex;
+        margin-left: 11px 
+    }
     .nav {
         display: none;
     }
 }
-
+@media (max-width: 360px) {
+    header {
+        max-width: 300px;
+        padding-top: 12.5px;
+        padding-bottom: 12.5px;
+    }
+    .burger {
+        display: flex;
+        margin-left: 11px 
+    }
+    .nav {
+        display: none;
+    }
+    .icons img:not(.profile) {
+        display: none;
+    }
+    .profile {
+        margin-right: 16px;
+    }
+}
